--- a/src/main/resources/Main.fxml
+++ b/src/main/resources/Main.fxml
@@ -17,14 +17,14 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
          <children>
-            <Label prefHeight="27.0" prefWidth="270.0" text="Product Standardaization Script">
+            <Label prefHeight="27.0" prefWidth="270.0" text="Sync DB Offline">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
             <CheckBox fx:id="chkRunAsRoot" mnemonicParsing="false" text="run as super user" />
             <PasswordField fx:id="txtRootPassword" />
-            <Button fx:id="btnRunScript" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="50.0" text="Run" />
+            <Button fx:id="btnRunScript" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="50.0" text="Sync" />
             <AnchorPane fx:id="container" VBox.vgrow="ALWAYS">
                <children>
                   <ProgressIndicator fx:id="progressIndicator" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
